<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/vz1"
    tools:context="hr.foi.air.activity.RegistrationActivity">

    <TextView
        android:id="@+id/reg_tw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textColor="@android:color/background_dark"
        android:textSize="30sp"
        android:text="@string/registration"/>

    <TextView
        android:id="@+id/reg_name_tw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/name"/>

    <EditText
        android:id="@+id/reg_name_et"
        android:layout_width="@dimen/layout_width_edit_text"
        android:layout_height="@dimen/layout_height_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="145dp"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:background="@drawable/edit_text2_style"/>

    <TextView
        android:id="@+id/reg_surname_tw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="190dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/surname"/>

    <EditText
        android:id="@+id/reg_surname_et"
        android:layout_width="@dimen/layout_width_edit_text"
        android:layout_height="@dimen/layout_height_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="215dp"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:background="@drawable/edit_text2_style"/>

    <TextView
        android:id="@+id/reg_email_tw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="260dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/email" />

    <EditText
        android:id="@+id/reg_email_et"
        android:layout_width="@dimen/layout_width_edit_text"
        android:layout_height="@dimen/layout_height_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="285dp"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:background="@drawable/edit_text2_style"/>

    <TextView
        android:id="@+id/reg_username_tw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="330dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/username" />

    <EditText
        android:id="@+id/reg_username_et"
        android:layout_width="@dimen/layout_width_edit_text"
        android:layout_height="@dimen/layout_height_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="355dp"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:background="@drawable/edit_text2_style"/>

    <TextView
        android:id="@+id/reg_password_tw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="400dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/password"/>

    <EditText
        android:id="@+id/reg_password_et"
        android:layout_width="@dimen/layout_width_edit_text"
        android:layout_height="@dimen/layout_height_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="425dp"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:background="@drawable/edit_text2_style"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="@dimen/layout_width_edit_text"
        android:layout_height="@dimen/layout_height_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="495dp"
        android:background="@drawable/edit_button2_style"
        android:text="@string/signup"
        android:textColor="@color/white" />
</RelativeLayout>
